<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apolo.controles.ControlText">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="EditText"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNumero"
        android:inputType="number"
        android:hint="@string/numero"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:maxLength="15"
        android:singleLine="false"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNumero1"
        android:layout_below="@+id/edtNumero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        android:imeActionLabel="@string/enviar"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDesactivado"
        android:layout_below="@+id/edtNumero1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:hint="@string/edtDesactivado"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescripcion"
        android:layout_below="@+id/edtDesactivado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="3"
        android:hint="@string/edtDescripcion"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/contador"
        android:layout_below="@+id/edtDescripcion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtActionKey"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/contador"
        android:layout_alignParentStart="true"
        android:imeOptions="actionSearch"
        android:ems="10"
        android:hint="Buscar cliente"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtActionFoco"
        android:layout_below="@+id/edtActionKey"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Focus"
        android:inputType="number"
        />


</RelativeLayout>
